update readme.md file structure